# kaiji

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README_ja.md  README_zh.md  RELEASING.md
.github/workflows/: pages.yml  release.yml
Formula/: kaiji.rb
benches/: bulk_bench.rs  index_bench.rs  normalize_bench.rs
bindings/go/: go.mod  kaiji.go  kaiji.h  kaiji_test.go
bindings/java/: README.md  build.gradle.kts  settings.gradle.kts
bindings/java/src/main/java/io/github/kenttokyo/kaiji/: Kaiji.java
bindings/java/src/test/java/io/github/kenttokyo/kaiji/: KaijiTest.java
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/: kaiji.pyi
bindings/python/src/: lib.rs
bindings/wasm/: Cargo.toml  package.json
bindings/wasm/src/: lib.rs
crates/kaiji-c/: Cargo.toml
crates/kaiji-c/src/: lib.rs
crates/kaiji-cli/: Cargo.toml
crates/kaiji-cli/src/: main.rs
crates/kaiji-java/: Cargo.toml
crates/kaiji-java/src/: lib.rs
docs/playground/: index.html
examples/: match_names.rs  normalize_cli.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: normalize.rs
scripts/: gen_ivs_map.py
src/: address.rs  config.rs  dedup.rs  error.rs  index.rs  kana.rs  lib.rs  matcher.rs  normalize.rs  normalizer.rs  romaji.rs  similarity.rs  variants.rs  width.rs  word_convert.rs
