[package]
name = "kaiji-python"
version = "0.1.0"
edition = "2024"
description = "Python bindings for the kaiji CJK normalization engine"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "kaiji"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
kaiji = { path = "../..", features = ["japanese", "index"] }
