[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kaiji"
version = "0.1.0"
description = "High-performance CJK fuzzy search and text normalization engine"
readme = "../../README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
keywords = ["cjk", "japanese", "normalization", "kanji", "unicode"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Linguistic",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "kaiji"
python-source = "python"
