[package]
name = "kaiji-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for the kaiji CJK normalization engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kent-tokyo/kaiji"
homepage = "https://github.com/kent-tokyo/kaiji"
keywords = ["cjk", "japanese", "normalization", "kanji", "cli"]
categories = ["command-line-utilities", "text-processing"]
rust-version = "1.85"

[[bin]]
name = "kaiji"
path = "src/main.rs"

[dependencies]
kaiji = { path = "../..", features = ["japanese"] }
clap = { version = "4", features = ["derive"] }
